@@ -29,11 +29,65 @@ class FakeConnection(object):
 
 def test_handle_connection():
     conn = FakeConnection("GET / HTTP/1.0\r\n\r\n")
-    expected_return = 'HTTP/1.0 200 OK\r\n' + \
-                      'Content-type: text/html\r\n' + \
+    expected_return = 'HTTP/1.0 200 OK \r\n' + \
+                      'Content-type: text/html \r\n' + \
                       '\r\n' + \
-                      '<h1>Hello, world.</h1>' + \
-                      'This is ctb\'s Web server.'
+                      '<h1>Hello, World!</h1> this is pricket4\'s Web server! <br>' + \
+                      '<a href="/content">  Content   </a><br>' + \
+                      '<a href="/file">     File      </a><br>' + \
+                      '<a href="/image">    Image     </a><br>' + \
+                      'Thank you for connecting. ' + \
+                      'Good bye!'
+
+    server.handle_connection(conn)
+
+
+    assert conn.sent == expected_return, 'Got: %s' % (repr(conn.sent),)
+
+def test_handle_connection_content():
+    conn = FakeConnection("GET /content HTTP/1.0\r\n\r\n")
+    expected_return = 'HTTP/1.0 200 OK \r\n' + \
+                      'Content-type: text/html \r\n' + \
+                      '\r\n' + \
+                      '<h1>Content</h1><br>' + \
+                      'Thank you for connecting. ' + \
+                      'Good bye!'
+
+    server.handle_connection(conn)
+
+    assert conn.sent == expected_return, 'Got: %s' % (repr(conn.sent),)
+
+def test_handle_connection_file():
+    conn = FakeConnection("GET /file HTTP/1.0\r\n\r\n")
+    expected_return = 'HTTP/1.0 200 OK \r\n' + \
+                      'Content-type: text/html \r\n' + \
+                      '\r\n' + \
+                      '<h1>File</h1><br>' + \
+                      'Thank you for connecting. ' + \
+                      'Good bye!'
+
+    server.handle_connection(conn)
+
+    assert conn.sent == expected_return, 'Got: %s' % (repr(conn.sent),)
+
+def test_handle_connection_image():
+    conn = FakeConnection("GET /image HTTP/1.0\r\n\r\n")
+    expected_return = 'HTTP/1.0 200 OK \r\n' + \
+                      'Content-type: text/html \r\n' + \
+                      '\r\n' + \
+                      '<h1>Image</h1><br>' + \
+                      'Thank you for connecting. ' + \
+                      'Good bye!'
+
+    server.handle_connection(conn)
+
+    assert conn.sent == expected_return, 'Got: %s' % (repr(conn.sent),)
+
+def test_post():
+    conn = FakeConnection("POST / HTTP/1.0\r\n\r\n")
+    expected_return = 'HTTP/1.0 200 OK \r\n' + \
+                      '\r\n' + \
+                      'Hello World!' 
 
     server.handle_connection(conn)
 
